@@ -358,10 +358,11 @@ be used at times to test reports for <I>future</I> public consumption.)
 	</OL>
 <LI><A HREF="/usrlocalmgi/live/dataload/crossload/crossloadindex.html">CrossLoad: Data and QC Reports</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/GOindex.html">GO Vocabulary/DAG Load</A>
-<LI><A HREF="/usrlocalmgi/live/dataload/goaload/index.html">GOA Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/goaload/index.html">GOA/Mouse Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/goahumanload/index.html">GOA/Human Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/goratload/index.html">GO/Rat Load</A>
-<LI><A HREF="/usrlocalmgi/live/dataload/gocfpload/index.html">GOC Interontology Function/Process Load</A>
-<LI><A HREF="/usrlocalmgi/live/dataload/gorefgenload/index.html">GORefGen Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/gocfpload/index.html">GO/CFP (aka GOC) Load</A>
+<LI><A HREF="/usrlocalmgi/live/dataload/gorefgenload/index.html">GO/RefGenome Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MPindex.html">Mammalian Phenotype Vocabulary/DAG Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MAindex.html">Adult Mouse Anatomy Vocabulary/DAG Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/OMIMindex.html">OMIM Vocabulary Load</A>
